fix: not setting gap

--- a/src/app/features/home/components/time-picker/time-picker.component.scss
+++ b/src/app/features/home/components/time-picker/time-picker.component.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   gap: 10px;
   form {
+    display: inherit;
+    flex-direction: inherit;
+    gap: inherit;
     .title {
       display: flex;
       align-items: center;
